--- a/Checklist.html
+++ b/Checklist.html
@@ -11,7 +11,7 @@ applyBodyTag="false"
 <head>
   <title> Checker </title>
   <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
+  <apex:includeScript value="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"/>
   <apex:includeScript value="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"/>
   <apex:includeScript value="{!URLFOR($Resource.ChecklistAssets, 'forceTK/forceTK.js')}"/>
   <apex:stylesheet value="{!URLFOR($Resource.ChecklistAssets, 'fonts/proximanova.css')}"/>
