--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -13,83 +13,11 @@ id="todo"
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
 <meta name="viewport" content="initial-scale = 1.0, user-scalable = no"/>
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-<style>
-h1 { padding: .2em; margin: 0; }
-#admin-panel ol { box-sizing: border-box; margin: 0 !important; padding: 0 15px !important; }
-.ui-widget-header {
-  font-size: 24px;
-  margin-left: -5px;
-  font-weight: 400;
-  color: #333333;
-}
-#checklist .pbTitle {
-  padding: 5px 12px !important;
-}
-#checklist .pbSubsection {
-  padding: 7px 12px !important;
-}
-#admin-panel li {
-  list-style-type: none;
-  padding: 30px;
-  margin: 15px 0 !important;
-  color: #333333;
-  background: #f0f0f0;
-  border: 1px solid #CCCCCC;
-  border-radius: 7px;
-}
-#checklist-edit {
-  margin-right: 200px;
-}
-.sortable {
-  margin-top: 0px;
-  width: 100%;
-}
-.sortable li {
-  overflow: auto;
-  list-style-type: none;
-  box-sizing: border-box;
-  padding: 30px;
-  padding-bottom: 20px !important;
-  width: 100%;
-  margin-left: -10px;
-}
-.form-info, .border-light {
-  list-style-type: none;
-  padding: 30px !important;
-  border-top: 20px solid #BBDDBB !important;
-}
-#placeholder {
-  background: #FFFFFF !important;
-  color: #333333 !important;
-  border: none !important;
-  padding: 0px !important;
-}
-label {
-  margin-right: 15px;
-}
-.question {
-  width: 400px;
-}
-.noTopMargin {
-  margin-top: 0;
-}
-.full {
-  float: left;
-  width: 100%;
-  padding-bottom: 1px;
-}
-.half {
-  float: left;
-  width: 40%;
-}
-.dlt {
-  float: right;
-}
-</style>
+<apex:includeScript value="//code.jquery.com/jquery-1.10.2.js"/>
+<apex:includeScript value="//code.jquery.com/ui/1.10.4/jquery-ui.js"/>
+<apex:includeScript value="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"/>
+<apex:includeScript value="{!URLFOR($Resource.ChecklistAssets, 'UISortable.js')}"/>
+<apex:stylesheet value="{!URLFOR($Resource.ChecklistAssets, 'adminStyle.css')}"/>
 <script>
 $(function() {
   $( "ol" ).sortable({
@@ -396,16 +324,14 @@ $(function() {
 </body>
 <script>
 
-/** To go back on the browser. */
-function goBack() {
-    window.history.back()
-}
-
 /* Angular */
 var checklistApp = angular.module('checklistApp', ['ui.sortable']);
 checklistApp.controller("AdminCtrl", function ($scope) {
+    /** True if we are on the new page. */
     $scope.newPage = true;
+    /** The Id of the current checklist. */
     $scope.checklistId = document.getElementById('checklistId').value;
+    /** If there is an Id we get the checklist. */
     if ($scope.checklistId) {
           $scope.newPage = false;
           Visualforce.remoting.Manager.invokeAction(
@@ -425,24 +351,27 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     } else {
       $scope.newPage = true;
     }
-    $scope.checklistIndex = 0;
+    /** Questions for the edit view. */
+    $scope.questions;
+    /** Items for the new view. */
     $scope.items = new Array();
+    /** An empty first question for the new view. */
     $scope.items[0] = new Object();
+    /** A new Checklist. */
     $scope.checklist = new Object();
     $scope.checklist.name = 'Default Name';
     $scope.checklist.description = 'Default Description';
+    /** All checklists in the database. */
     $scope.checklists = {!CheckLists};
+    /** True if no checklists are in the databse. */
     var emptyDB = $scope.checklists.length == 0;
-    $scope.checklists2 = $scope.checklists;
-    $scope.item = $scope.checklists[0];
+    /** Types of questions. */
     $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
+    /** True if item has Id. */
     $scope.inDB = function(item) {
-    return item.Id != null;
+      return item.Id != null;
     }
-    $scope.setNewPage = function(bool) {
-      $scope.item = $scope.checklists[$scope.checklistIndex];
-      $scope.newPage = bool;
-    }
+    /** Creates a new checklist. */
     $scope.newChecklist = function() {
       for (var i = 0; i < $scope.items.length; i++) {
         $scope.items[i].Order__c = i;
@@ -473,19 +402,29 @@ checklistApp.controller("AdminCtrl", function ($scope) {
         console.log('Invalid New Checklist');
       }
     }
+
+    /** Adds a question to the current checklist. */
     $scope.addQuestion = function() {
       $scope.items.push(new Object());
     }
+
+    /** Adds a question for an edit question. */
     $scope.addQuestionEdit = function() {
       var item = {isActive__c : true, Order__c: $scope.questionCount() + 1, Question__c : "New Question"}
       $scope.questions.push(item);
     }
+
+    /** Removes ITEM from the current checklist. */
     $scope.removeQuestion = function(item) {
       $scope.items.splice($scope.items.indexOf(item), 1);
     }
+
+    /** True if the ITEM needs values to be input. */
     $scope.showValues = function(item) {
       return (item.Type__c == 'Picklist') || (item.Type__c == 'Multi-Select');
     }
+
+    /** Edits the checklist. */
     $scope.editChecklist = function() {
       if ($scope.editPage.$valid) {
         delete $scope.item.attributes;
@@ -512,6 +451,8 @@ checklistApp.controller("AdminCtrl", function ($scope) {
       } else {
         console.log("Fix EditForm");
       }};
+
+      /** Updates the items in COPY. */
       var updateItems = function(copy) {
         for(var i = 0; i < $scope.questions.length; i++) {
           delete $scope.questions[i].$$hashKey;
@@ -533,6 +474,8 @@ checklistApp.controller("AdminCtrl", function ($scope) {
             }, {escape: true}
             );
       }
+
+    /** Deletes the ITEM. */
     $scope.deleteChecklistItem = function(item) {
       console.log(item);
       item.isActive__c = false;
@@ -544,6 +487,8 @@ checklistApp.controller("AdminCtrl", function ($scope) {
         }
       }
     }
+
+    /** Returns the number of questions that are active. */
     $scope.questionCount = function() {
       var count = 0;
       for (var i = 0; i < $scope.questions.length; i++) {
@@ -553,6 +498,8 @@ checklistApp.controller("AdminCtrl", function ($scope) {
       }
       return count;
     }
+
+    /** Gets the items for editing a checklit. */
     $scope.getChecklistItems = function() {
       var copy = {};
       copy.Id = $scope.checklistId;
@@ -572,231 +519,17 @@ checklistApp.controller("AdminCtrl", function ($scope) {
           {escape:true}
           );
     };
+
     if (!emptyDB) {
         $scope.getChecklistItems();
     }
 });
 
-/*
- jQuery UI Sortable plugin wrapper
+/** To go back on the browser. */
+function goBack() {
+    window.history.back()
+}
 
- @param [ui-sortable] {object} Options to pass to $.fn.sortable() merged onto ui.config
- */
-angular.module('ui.sortable', [])
-  .value('uiSortableConfig',{})
-  .directive('uiSortable', [
-    'uiSortableConfig', '$timeout', '$log',
-    function(uiSortableConfig, $timeout, $log) {
-      return {
-        require: '?ngModel',
-        link: function(scope, element, attrs, ngModel) {
-          var savedNodes;
-
-          function combineCallbacks(first,second){
-            if(second && (typeof second === 'function')) {
-              return function(e, ui) {
-                first(e, ui);
-                second(e, ui);
-              };
-            }
-            return first;
-          }
-
-          function hasSortingHelper (element) {
-            var helperOption = element.sortable('option','helper');
-            return helperOption === 'clone' || typeof helperOption === 'function';
-          }
-
-          var opts = {};
-
-          var callbacks = {
-            receive: null,
-            remove:null,
-            start:null,
-            stop:null,
-            update:null
-          };
-
-          angular.extend(opts, uiSortableConfig);
-
-          if (!angular.element.fn || !angular.element.fn.jquery) {
-            $log.error('ui.sortable: jQuery should be included before AngularJS!');
-            return;
-          }
-
-          if (ngModel) {
-
-            // When we add or remove elements, we need the sortable to 'refresh'
-            // so it can find the new/removed elements.
-            scope.$watch(attrs.ngModel+'.length', function() {
-              // Timeout to let ng-repeat modify the DOM
-              $timeout(function() {
-                // ensure that the jquery-ui-sortable widget instance
-                // is still bound to the directive's element
-                if (!!element.data('ui-sortable')) {
-                  element.sortable('refresh');
-                }
-              });
-            });
-
-            callbacks.start = function(e, ui) {
-              // Save the starting position of dragged item
-              ui.item.sortable = {
-                index: ui.item.index(),
-                cancel: function () {
-                  ui.item.sortable._isCanceled = true;
-                },
-                isCanceled: function () {
-                  return ui.item.sortable._isCanceled;
-                },
-                _isCanceled: false
-              };
-            };
-
-            callbacks.activate = function(/*e, ui*/) {
-              // We need to make a copy of the current element's contents so
-              // we can restore it after sortable has messed it up.
-              // This is inside activate (instead of start) in order to save
-              // both lists when dragging between connected lists.
-              savedNodes = element.contents();
-
-              // If this list has a placeholder (the connected lists won't),
-              // don't inlcude it in saved nodes.
-              var placeholder = element.sortable('option','placeholder');
-
-              // placeholder.element will be a function if the placeholder, has
-              // been created (placeholder will be an object).  If it hasn't
-              // been created, either placeholder will be false if no
-              // placeholder class was given or placeholder.element will be
-              // undefined if a class was given (placeholder will be a string)
-              if (placeholder && placeholder.element && typeof placeholder.element === 'function') {
-                var phElement = placeholder.element();
-                // workaround for jquery ui 1.9.x,
-                // not returning jquery collection
-                phElement = angular.element(phElement);
-
-                // exact match with the placeholder's class attribute to handle
-                // the case that multiple connected sortables exist and
-                // the placehoilder option equals the class of sortable items
-                var excludes = element.find('[class="' + phElement.attr('class') + '"]');
-
-                savedNodes = savedNodes.not(excludes);
-              }
-            };
-
-            callbacks.update = function(e, ui) {
-              // Save current drop position but only if this is not a second
-              // update that happens when moving between lists because then
-              // the value will be overwritten with the old value
-              if(!ui.item.sortable.received) {
-                ui.item.sortable.dropindex = ui.item.index();
-                ui.item.sortable.droptarget = ui.item.parent();
-
-                // Cancel the sort (let ng-repeat do the sort for us)
-                // Don't cancel if this is the received list because it has
-                // already been canceled in the other list, and trying to cancel
-                // here will mess up the DOM.
-                element.sortable('cancel');
-              }
-
-              // Put the nodes back exactly the way they started (this is very
-              // important because ng-repeat uses comment elements to delineate
-              // the start and stop of repeat sections and sortable doesn't
-              // respect their order (even if we cancel, the order of the
-              // comments are still messed up).
-              if (hasSortingHelper(element)) {
-                // restore all the savedNodes except .ui-sortable-helper element
-                // (which is placed last). That way it will be garbage collected.
-                savedNodes = savedNodes.not(savedNodes.last());
-              }
-              savedNodes.appendTo(element);
-
-              // If received is true (an item was dropped in from another list)
-              // then we add the new item to this list otherwise wait until the
-              // stop event where we will know if it was a sort or item was
-              // moved here from another list
-              if(ui.item.sortable.received && !ui.item.sortable.isCanceled()) {
-                scope.$apply(function () {
-                  ngModel.$modelValue.splice(ui.item.sortable.dropindex, 0,
-                                             ui.item.sortable.moved);
-                });
-              }
-            };
-
-            callbacks.stop = function(e, ui) {
-              // If the received flag hasn't be set on the item, this is a
-              // normal sort, if dropindex is set, the item was moved, so move
-              // the items in the list.
-              if(!ui.item.sortable.received &&
-                 ('dropindex' in ui.item.sortable) &&
-                 !ui.item.sortable.isCanceled()) {
-
-                scope.$apply(function () {
-                  ngModel.$modelValue.splice(
-                    ui.item.sortable.dropindex, 0,
-                    ngModel.$modelValue.splice(ui.item.sortable.index, 1)[0]);
-                });
-              } else {
-                // if the item was not moved, then restore the elements
-                // so that the ngRepeat's comment are correct.
-                if ((!('dropindex' in ui.item.sortable) || ui.item.sortable.isCanceled()) &&
-                    !hasSortingHelper(element)) {
-                  savedNodes.appendTo(element);
-                }
-              }
-            };
-
-            callbacks.receive = function(e, ui) {
-              // An item was dropped here from another list, set a flag on the
-              // item.
-              ui.item.sortable.received = true;
-            };
-
-            callbacks.remove = function(e, ui) {
-              // Remove the item from this list's model and copy data into item,
-              // so the next list can retrive it
-              if (!ui.item.sortable.isCanceled()) {
-                scope.$apply(function () {
-                  ui.item.sortable.moved = ngModel.$modelValue.splice(
-                    ui.item.sortable.index, 1)[0];
-                });
-              }
-            };
-
-            scope.$watch(attrs.uiSortable, function(newVal /*, oldVal*/) {
-              // ensure that the jquery-ui-sortable widget instance
-              // is still bound to the directive's element
-              if (!!element.data('ui-sortable')) {
-                angular.forEach(newVal, function(value, key) {
-                  if(callbacks[key]) {
-                    if( key === 'stop' ){
-                      // call apply after stop
-                      value = combineCallbacks(
-                        value, function() { scope.$apply(); });
-                    }
-                    // wrap the callback
-                    value = combineCallbacks(callbacks[key], value);
-                  }
-                  
-                  element.sortable('option', key, value);
-                });
-              }
-            }, true);
-
-            angular.forEach(callbacks, function(value, key) {
-              opts[key] = combineCallbacks(value, opts[key]);
-            });
-
-          } else {
-            $log.info('ui.sortable: ngModel not provided!', element);
-          }
-
-          // Create sortable
-          element.sortable(opts);
-        }
-      };
-    }
-  ]);
 </script>
 </html>
 </apex:page>
