delete button no overlap

--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -155,7 +155,7 @@ $(function() {
                   <br/>
                   <textarea cols="60" rows="5" ng-model="item.Question__c" name="Q1" ng-required="true"></textarea>
                 </div>
-                <input type='button' class="btn dlt" value='Delete' ng-click='removeQuestion(item)'/>
+                <input type='button' class="btn dlt" value='Delete' ng-click='removeQuestion(item)' style="margin-top: -25px"/>
               </li>
             </ol>
           </div>
@@ -299,7 +299,7 @@ $(function() {
                   <br/>
                   <textarea cols="60" rows="5" ng-model="question.Question__c" ng-required="true"></textarea>
                 </div>
-                <input type="button" class="btn dlt" value="Delete" ng-click="deleteChecklistItem(question)"></input>
+                <input type="button" class="btn dlt" value="Delete" ng-click="deleteChecklistItem(question)" style="margin-top: -25px"></input>
                 <br/>
               </li>
             </ol>
